# ontograph

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
ontograph/: __init__.py  ast_extractor.py  causal_engine.py  causal_extractor.py  causal_models.py  causal_scoring.py  cli.py  export.py  extractor.py  falsify.py  graph.py  llm_client.py  llm_extractor.py  mcp_bridge.py  merge.py  models.py  quality.py  resolver.py  schema.py
ontograph/dashboard/: app.py
ontograph/parsers/: __init__.py  html_parser.py  markdown_parser.py  pdf_parser.py
schemas/: base.yaml  biology.yaml  dabs.yaml  economics.yaml  engineering.yaml
specs/: EntityResolver.cfg  EntityResolver.tla  KnowledgeGraph.cfg  KnowledgeGraph.tla  causal-graph-v2.md  ontology-extraction-discipline-v1.md
tests/: test_ast_extractor.py  test_causal.py  test_cli_phase_d.py  test_cli_phase_e.py  test_core.py  test_falsify.py  test_merge.py  test_models_extensions.py  test_phase2.py  test_phase3.py  test_quality.py  test_schema_extensions.py
tests/fixtures/: sample_economics.md  sample_trade.md
